--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "strapi-plugin-graphql": "3.5.4",
     "strapi-plugin-upload": "3.5.4",
     "strapi-plugin-users-permissions": "3.5.4",
-    "strapi-utils": "3.5.4"
+    "strapi-provider-email-nodemailer": "^3.6.10",
+    "strapi-utils": "3.5.4",
+    "stripe": "^10.0.0"
   },
   "author": {
     "name": "A Strapi developer"
