Finished Orders no banco

--- a/package.json
+++ b/package.json
@@ -11,23 +11,30 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^27.0.0",
-    "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@ckeditor/ckeditor5-react": "3.0.2",
+    "@strapi/design-system": "^1.2.1",
+    "@strapi/icons": "^1.2.1",
     "jsdom": "^16.5.3",
-    "knex": "0.21.18",
-    "pg": "8.5.1",
-    "slugify": "^1.5.0",
-    "strapi": "3.5.4",
-    "strapi-admin": "3.5.4",
-    "strapi-connector-bookshelf": "3.5.4",
-    "strapi-plugin-content-manager": "3.5.4",
-    "strapi-plugin-content-type-builder": "3.5.4",
-    "strapi-plugin-email": "3.5.4",
-    "strapi-plugin-graphql": "3.5.4",
-    "strapi-plugin-upload": "3.5.4",
-    "strapi-plugin-users-permissions": "3.5.4",
-    "strapi-provider-email-nodemailer": "^3.6.10",
-    "strapi-utils": "3.5.4",
-    "stripe": "^10.0.0"
+    "knex": "0.95.6",
+    "pg": "^8.7.1",
+    "pg-connection-string": "^2.5.0",
+    "slugify": "^1.5.3",
+    "strapi": "3.6.2",
+    "strapi-admin": "^3.6.10",
+    "strapi-connector-bookshelf": "3.6.2",
+    "strapi-plugin-content-manager": "^3.6.10",
+    "strapi-plugin-content-type-builder": "^3.6.10",
+    "strapi-plugin-email": "3.6.2",
+    "strapi-plugin-email-designer": "^0.4.1",
+    "strapi-plugin-entity-relationship-chart": "3.1.0",
+    "strapi-plugin-graphql": "3.6.2",
+    "strapi-plugin-sync-roles-permissions": "^0.4.2",
+    "strapi-plugin-upload": "3.6.2",
+    "strapi-plugin-users-permissions": "3.6.2",
+    "strapi-provider-email-nodemailer": "^3.6.2",
+    "strapi-provider-upload-cloudinary": "^3.6.2",
+    "strapi-utils": "3.6.2",
+    "stripe": "^8.148.0"
   },
   "author": {
     "name": "A Strapi developer"
